--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "coc-pairs": ">=1.2.20",
-    "coc-eslint": ">=1.2.3",
     "coc-snippets": ">=2.1.17",
     "coc-json": ">=1.2.4",
     "coc-tsserver": ">=1.4.9",
     "coc-prettier": ">=1.1.11",
     "coc-tailwindcss": ">=0.4.0",
-    "coc-css": ">=1.2.2"
+    "coc-css": ">=1.2.2",
+    "coc-eslint": ">=1.2.3",
+    "coc-tslint-plugin": ">=1.1.1"
   }
 }
