--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -7,7 +7,8 @@
     "coc-prettier": ">=1.1.11",
     "coc-tailwindcss": ">=0.4.0",
     "coc-css": ">=1.2.2",
-    "coc-eslint": ">=1.2.3",
-    "coc-tslint-plugin": ">=1.1.1"
+    "coc-eslint": ">=1.2.4",
+    "coc-tslint-plugin": ">=1.1.1",
+    "es7-react-js-snippets": "https://github.com/dsznajder/vscode-es7-javascript-react-snippets"
   }
 }
