--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -7,9 +7,8 @@
 "typescript",
 "typescriptreact",
 "json",
-//"javascriptreact",
+"javascriptreact",
 "typescript.tsx",
 "graphql"
   ],
-  "eslint.enable": false
 }
