--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,14 +1,18 @@
 {
   "dependencies": {
-    "coc-pairs": ">=1.2.20",
-    "coc-snippets": ">=2.1.17",
-    "coc-json": ">=1.2.4",
-    "coc-tsserver": ">=1.4.9",
-    "coc-prettier": ">=1.1.11",
-    "coc-tailwindcss": ">=0.4.0",
-    "coc-css": ">=1.2.2",
+    "coc-actions": ">=1.0.5",
+    "coc-emmet": ">=1.1.4",
     "coc-eslint": ">=1.2.4",
+    "coc-highlight": ">=1.2.5",
+    "coc-json": ">=1.2.4",
+    "coc-marketplace": ">=1.7.0",
+    "coc-prettier": ">=1.1.11",
+    "coc-snippets": ">=2.1.17",
+    "coc-spell-checker": ">=1.0.2",
+    "coc-styled-components": ">=0.3.0",
+    "coc-tabnine": ">=1.2.2",
     "coc-tslint-plugin": ">=1.1.1",
+    "coc-tsserver": ">=1.4.9",
     "es7-react-js-snippets": "https://github.com/dsznajder/vscode-es7-javascript-react-snippets"
   }
 }
