--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,7 +1,7 @@
 {
-"suggest.noselect": false,
+	  "suggest.noselect": false,
 "coc.preferences.formatOnSaveFiletypes": [
-//"javascript",
+"javascript",
 "scss",
 "css",
 "typescript",
@@ -10,5 +10,8 @@
 "javascriptreact",
 "typescript.tsx",
 "graphql"
+  ],
+  "cSpell.userWords": [
+    "mobx"
   ],
 }
