--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,16 +1,17 @@
 {
   "dependencies": {
-    "coc-actions": ">=1.0.5",
+    "coc-actions": ">=1.2.1",
     "coc-emmet": ">=1.1.4",
-    "coc-eslint": ">=1.2.4",
+    "coc-eslint": ">=1.2.5",
+    "coc-explorer": ">=0.2.17",
     "coc-highlight": ">=1.2.5",
     "coc-json": ">=1.2.4",
     "coc-marketplace": ">=1.7.0",
     "coc-prettier": ">=1.1.11",
-    "coc-snippets": ">=2.1.17",
-    "coc-spell-checker": ">=1.0.2",
+    "coc-snippets": ">=2.1.18",
     "coc-styled-components": ">=0.3.0",
     "coc-tabnine": ">=1.2.2",
+    "coc-tslint": ">=1.0.17",
     "coc-tslint-plugin": ">=1.1.1",
     "coc-tsserver": ">=1.4.9",
     "es7-react-js-snippets": "https://github.com/dsznajder/vscode-es7-javascript-react-snippets"
