--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,46 @@
-# make sure nvim looks normal in tmux
-set -g terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal +P"tmux-256color"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
-set-option -g prefix C-space
 
+#######################
+# ***    PLUGINS   *** #
+########################
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'robhurring/tmux-spotify'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+
+#------------------------------------------------------------------------------#
+#                                    config                                    #
+#------------------------------------------------------------------------------#
+########################
+# ***    DISPLAY   *** #
+########################
+# make sure nvim looks normal in tmux
+# set -g terminal-overrides ',xterm-256color:Tc'
+# set -g default-terminal +P"tmux-256color"
+# set -as terminal-overrides ',xterm*:sitm=\E[3m'
+# Set tmux to display in 256 colors
+set -g default-terminal    "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+# Set border colors
+# set-option -g pane-border-style 'fg=#343D46,bg=colour0'
+# set-option -g pane-active-border-style 'fg=colour3,bg=colour0'
+
+# Set status line message style
+set -g message-style "fg=colour5,bg=default"
+
+# Set mode style (including history bar)
+set -g mode-style "fg=colour3"
+
+
+########################
+# ***    GENERAL   *** #
+########################
+
+set-option -g prefix C-space
+unbind C-b
 # so that escapes register immidiately in vim
 set -sg escape-time 0
 
@@ -25,7 +62,13 @@ set -g status-justify centre
 set -g window-status-current-format "#[fg=magenta]#[fg=black]#[bg=magenta]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=black] "
 set -g window-status-format "#[fg=yellow]#[fg=black]#[bg=yellow]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=black] "
 # act like vim
-set -g mode-keys vi
+# set -g mode-keys vi
+
+set -g focus-events on
+
+#------------------------------------------------------------------------------#
+#                                   mappings                                   #
+#------------------------------------------------------------------------------#
 
 # moving between panes
 bind -n M-h select-pane -L
@@ -72,3 +115,49 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind R source-file '~/.tmux.conf'
+bind-key M split-window -h "nvim ~/.tmux.conf"
+
+# easier and faster switching between next/prev window
+bind C-p previous-window
+bind C-n next-window
+
+
+#########################
+# ***  STATUS BAR   *** #
+#########################
+
+# Enable status bar
+set-option -g status on
+
+# Set window list to center
+set -g status-justify centre
+
+# Configure CPU plugin colors for statusline
+set -g @cpu_low_fg_color "#[fg=green]"
+set -g @cpu_medium_fg_color "#[fg=yellow]"
+set -g @cpu_high_fg_color "#[fg=red]"
+
+set -g @cpu_low_bg_color "#[bg=default]"
+set -g @cpu_medium_bg_color "#[bg=default]"
+set -g @cpu_high_bg_color "#[bg=default]"
+
+# Left Status Bar: [CPU Usage]
+set -g status-left "#{cpu_bg_color}#{cpu_fg_color} #{cpu_icon}#{cpu_percentage}"
+set -g status-left-length 85
+
+# Right Status Bar: [Spotify][Session Name][Date][Time]
+set -g status-right "♫ #{spotify_status}#{spotify_track} #[fg=magenta]#S #[fg=colour8]‹#[fg=yellow]#[fg=yellow,bold,bg=default] %b %d %Y "
+
+# Auto-hide status bar if pane is maximized
+set-hook -g 'after-resize-pane'  'run-shell -b "if [ \#{window_zoomed_flag} -eq 1 ]; then tmux set status off; else tmux set status on; fi"'
+set-hook -g 'after-new-window'   'run-shell -b "if [ \#{window_zoomed_flag} -eq 1 ]; then tmux set status off; else tmux set status on; fi"'
+set-hook -g 'after-kill-pane'    'run-shell -b "if [ \#{window_zoomed_flag} -eq 1 ]; then tmux set status off; else tmux set status on; fi"'
+set-hook -g 'pane-exited'        'run-shell -b "if [ \#{window_zoomed_flag} -eq 1 ]; then tmux set status off; else tmux set status on; fi"'
+set-hook -g 'after-split-window' 'run-shell -b "if [ \#{window_zoomed_flag} -gt 1 ]; then tmux set status off; else tmux set status on; fi"'
+
+
+# Initialize TMUX plugin manager
+run '~/.tmux/plugins/tpm/tpm'
