--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -7,6 +7,7 @@
     "coc-highlight": ">=1.2.5",
     "coc-json": ">=1.2.5",
     "coc-marketplace": ">=1.7.0",
+    "coc-pairs": ">=1.2.21",
     "coc-prettier": ">=1.1.11",
     "coc-project": ">=0.0.9",
     "coc-snippets": ">=2.1.21",
@@ -15,7 +16,7 @@
     "coc-terminal": ">=0.3.1",
     "coc-tslint": ">=1.0.17",
     "coc-tslint-plugin": ">=1.1.1",
-    "coc-tsserver": ">=1.4.10",
+    "coc-tsserver": ">=1.4.11",
     "coc-word": ">=1.2.2",
     "es7-react-js-snippets": "https://github.com/dsznajder/vscode-es7-javascript-react-snippets"
   }
