--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "coc-actions": ">=1.3.1",
+    "coc-actions": ">=1.4.0",
     "coc-emmet": ">=1.1.4",
     "coc-eslint": ">=1.2.6",
     "coc-explorer": ">=0.3.7",
@@ -10,7 +10,8 @@
     "coc-pairs": ">=1.2.21",
     "coc-prettier": ">=1.1.11",
     "coc-project": ">=0.0.9",
-    "coc-snippets": ">=2.1.21",
+    "coc-python": ">=1.2.9",
+    "coc-snippets": ">=2.1.22",
     "coc-styled-components": ">=0.3.0",
     "coc-tabnine": ">=1.2.2",
     "coc-terminal": ">=0.3.1",
