--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -7,7 +7,8 @@
     "json",
     "javascriptreact",
     "typescript.tsx",
-    "graphql"
+    "graphql",
+    "python"
   ],
 	"diagnostic.errorSign": "•",
   "diagnostic.warningSign": "•",
