--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -3,7 +3,7 @@
     "coc-actions": ">=1.4.0",
     "coc-emmet": ">=1.1.4",
     "coc-eslint": ">=1.2.6",
-    "coc-explorer": ">=0.3.13",
+    "coc-explorer": ">=0.3.14",
     "coc-highlight": ">=1.2.5",
     "coc-json": ">=1.2.5",
     "coc-marketplace": ">=1.7.0",
@@ -17,8 +17,7 @@
     "coc-terminal": ">=0.3.1",
     "coc-tslint": ">=1.0.17",
     "coc-tslint-plugin": ">=1.1.1",
-    "coc-tsserver": ">=1.4.11",
-    "coc-word": ">=1.2.2",
-    "es7-react-js-snippets": "https://github.com/dsznajder/vscode-es7-javascript-react-snippets"
+    "coc-tsserver": ">=1.4.12",
+    "coc-word": ">=1.2.2"
   }
 }
