--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -3,21 +3,22 @@
     "coc-actions": ">=1.4.0",
     "coc-emmet": ">=1.1.4",
     "coc-eslint": ">=1.2.6",
-    "coc-explorer": ">=0.3.17",
+    "coc-explorer": ">=0.4.1",
     "coc-highlight": ">=1.2.5",
     "coc-json": ">=1.2.5",
     "coc-marketplace": ">=1.7.0",
-    "coc-omnisharp": ">=0.0.25",
+    "coc-omnisharp": ">=0.0.26",
     "coc-pairs": ">=1.2.21",
     "coc-prettier": ">=1.1.11",
     "coc-project": ">=0.0.9",
     "coc-python": ">=1.2.9",
-    "coc-snippets": ">=2.1.24",
+    "coc-snippets": ">=2.1.25",
     "coc-styled-components": ">=0.3.0",
+    "coc-tailwindcss": ">=0.5.0",
     "coc-terminal": ">=0.3.1",
     "coc-tslint": ">=1.0.17",
     "coc-tslint-plugin": ">=1.1.1",
-    "coc-tsserver": ">=1.4.13",
+    "coc-tsserver": ">=1.5.1",
     "coc-word": ">=1.2.2",
     "coc-yank": ">=1.1.4"
   }
