--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "coc-eslint": ">=1.2.7",
+    "coc-explorer": ">=0.7.11",
     "coc-highlight": ">=1.2.5",
     "coc-json": ">=1.2.6",
     "coc-marketplace": ">=1.7.0",
@@ -8,6 +9,7 @@
     "coc-prettier": ">=1.1.14",
     "coc-snippets": ">=2.1.28",
     "coc-tailwindcss": ">=0.6.0",
+    "coc-terminal": ">=0.3.1",
     "coc-tsserver": ">=1.5.2",
     "coc-word": ">=1.2.2",
     "coc-yank": ">=1.1.4"
