--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -7,6 +7,7 @@
     "coc-highlight": ">=1.2.5",
     "coc-json": ">=1.2.6",
     "coc-lists": ">=1.3.10",
+    "coc-lua": ">=0.1.1",
     "coc-marketplace": ">=1.7.0",
     "coc-pairs": ">=1.2.21",
     "coc-prettier": ">=1.1.14",
