--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,27 +1,17 @@
 {
   "dependencies": {
-    "coc-actions": ">=1.4.1",
     "coc-emoji": ">=1.2.3",
-    "coc-eslint": ">=1.2.7",
-    "coc-explorer": ">=0.7.11",
-    "coc-floatinput": ">=1.1.0",
-    "coc-highlight": ">=1.2.5",
-    "coc-json": ">=1.2.6",
-    "coc-leetcode": ">=1.0.1",
-    "coc-lists": ">=1.3.10",
-    "coc-lua": ">=0.1.1",
+    "coc-eslint": ">=1.3.0",
+    "coc-explorer": ">=0.8.1",
+    "coc-floatinput": ">=1.3.1",
+    "coc-highlight": ">=1.2.6",
     "coc-marketplace": ">=1.7.0",
     "coc-pairs": ">=1.2.21",
-    "coc-prettier": ">=1.1.14",
-    "coc-python": ">=1.2.12",
     "coc-react-refactor": ">=0.3.0",
-    "coc-sh": ">=0.5.1",
-    "coc-snippets": ">=2.1.28",
+    "coc-snippets": ">=2.2.0",
     "coc-tailwindcss": ">=0.7.0",
-    "coc-tasks": ">=0.0.7",
-    "coc-tsserver": ">=1.5.2",
+    "coc-tsserver": ">=1.5.6",
     "coc-word": ">=1.2.2",
-    "coc-yank": ">=1.1.4",
-    "es7-react-js-snippets": "https://github.com/dsznajder/vscode-es7-javascript-react-snippets"
+    "coc-yank": ">=1.1.4"
   }
 }
