--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,17 +1,20 @@
 {
   "dependencies": {
     "coc-emoji": ">=1.2.3",
-    "coc-eslint": ">=1.3.0",
-    "coc-explorer": ">=0.8.1",
-    "coc-floatinput": ">=1.3.1",
+    "coc-eslint": ">=1.3.1",
+    "coc-explorer": ">=0.8.2",
+    "coc-floatinput": ">=1.3.3",
     "coc-highlight": ">=1.2.6",
+    "coc-json": ">=1.3.1",
+    "coc-leetcode": ">=1.0.1",
     "coc-marketplace": ">=1.7.0",
     "coc-pairs": ">=1.2.21",
+    "coc-prettier": ">=1.1.17",
     "coc-react-refactor": ">=0.3.0",
     "coc-snippets": ">=2.2.0",
     "coc-tailwindcss": ">=0.7.0",
-    "coc-tsserver": ">=1.5.6",
+    "coc-tsserver": ">=1.5.7",
     "coc-word": ">=1.2.2",
-    "coc-yank": ">=1.1.4"
+    "coc-yank": ">=1.1.5"
   }
 }
