--- a/gh/config.yml
+++ b/gh/config.yml
@@ -1,3 +1,11 @@
-github.com:
-  - user: dinhmai74
-    oauth_token: 20fa44038409fca0f3a8359dbf4dd504f364f02a
+# What protocol to use when performing git operations. Supported values: ssh, https
+git_protocol: https
+# What editor gh should run when creating issues, pull requests, etc. If blank, will refer to environment.
+editor:
+# When to interactively prompt. This is a global config that cannot be overridden by hostname. Supported values: enabled, disabled
+prompt: enabled
+# A pager program to send command output to, e.g. "less". Set the value to "cat" to disable the pager.
+pager:
+# Aliases allow you to create nicknames for gh commands
+aliases:
+    co: pr checkout
