--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -19,7 +19,7 @@
   "tailwindCSS.emmetCompletions": true,
   "typescript.showUnused": false,
   "yank.enableCompletion": false,
-  "coc.preferences.formatOnType": true,
+  "coc.preferences.formatOnType": false,
   "tsserver.log": "verbose",
   "tsserver.npm": "/usr/local/bin/npm",
   "coc.preferences.colorSupport": true,
@@ -29,5 +29,6 @@
   "explorer.keyMappings": {
     "<cr>": ["expandable?", "expand", "open"],
     "v": "open:vsplit"
-  }
+  },
+  "floatinput.status.enabled": true
 }
