--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,20 +1,17 @@
 {
   "dependencies": {
-    "coc-eslint": ">=1.3.1",
-    "coc-explorer": ">=0.8.2",
-    "coc-floatinput": ">=1.3.3",
+    "coc-eslint": ">=1.3.2",
+    "coc-explorer": ">=0.9.1",
+    "coc-floatinput": ">=1.4.3",
     "coc-fzf-preview": ">=0.4.25",
     "coc-highlight": ">=1.2.6",
     "coc-leetcode": ">=1.0.1",
     "coc-marketplace": ">=1.7.0",
     "coc-pairs": ">=1.2.21",
-    "coc-prettier": ">=1.1.17",
+    "coc-prettier": ">=1.1.18",
     "coc-react-refactor": ">=0.3.0",
-    "coc-snippets": ">=2.2.1",
-    "coc-tsserver": ">=1.5.7",
-    "coc-ultisnips": ">=1.2.3",
-    "coc-utils": ">=0.0.13",
-    "coc-yank": ">=1.1.5",
-    "es7-react-js-snippets": "https://github.com/dsznajder/vscode-es7-javascript-react-snippets"
+    "coc-snippets": ">=2.2.3",
+    "coc-tsserver": ">=1.6.0",
+    "coc-yank": ">=1.1.8"
   }
 }
