modify before go

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -23,6 +23,8 @@
   "explorer.width": 30,
   "explorer.icon.enableNerdfont": true,
   "explorer.previewAction.onHover": false,
+  "explorer.buffer.showHiddenBuffers": true,
+  "explorer.file.showHiddenFiles": true,
   "explorer.keyMappings.global": {
     "<cr>": ["expandable?", "expand", "open"],
     "v": "open:vsplit"
